Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85795

[QtRemoteObjects] QSortFilterProxyModel sort not working properrly

XMLWordPrintable

    • All
    • fcd250521b67f1ca1a2205ab566a1c405c2f0529 (qt/qtremoteobjects/dev) b162b25bf48d4015b66185c57daa4a71adcdb08a (qt/tqtc-qtremoteobjects/5.15)

      When calling sort() on the proxymodel server side than nothing happens
      on the client side. But after reload the data is properly sorted.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bstottle Brett Stottlemyer
            karimpinter Karim Pinter
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes