Update the replica when the layoutChanged signal is emitted

When a sort() is done on a QSortFilterProxyModel then it will emit
the layoutChanged() signal, so it should ensure that the replica is
updated in that case accordingly.

Fixes: QTBUG-85795
Change-Id: I7f34b24f4fab78c18655e986f54a0eb61db3a7b7
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit fcd250521b67f1ca1a2205ab566a1c405c2f0529)
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Andy Shaw <andy.shaw@qt.io>